[package]
name = "chat"
version = "0.1.0"
authors = ["Stephen Weeks <tene@allalone.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec"]}
async-stream = "0.2.0"
futures = "0.3.1"
linefeed = "0.6.0"
serde = {version = "1.0.104", features = ["derive"]}
bincode = "1.2.1"